Fix scrollbar issue and add MetaDesc

--- a/css/hachiko-4dff55.webflow.css
+++ b/css/hachiko-4dff55.webflow.css
@@ -2708,18 +2708,18 @@
 }
 
 .sidebar {
-  overflow: scroll;
+  overflow: visible;
 }
 
 .chat {
   flex-flow: column;
   justify-content: space-around;
   display: flex;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .toolbar {
-  overflow: scroll;
+  overflow: visible;
 }
 
 .sidebar-text {
